--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <h1>謎解き大作戦！</h1>
+        <h1>リミットゼロブレイカーズ 謎解き大作戦！</h1>
 
         <!-- 問題選択リストが表示されるエリア -->
         <div id="question-list-container">
